--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -57,6 +57,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="16dp"
                         android:layout_centerInParent="true"
+                        android:id="@+id/sort_mode_textview"
                         android:text="@string/main_toolbar_title"
                         android:textSize="14sp"/>
                     <TextView
