--- a/app/src/main/res/layout/rank_fragment.xml
+++ b/app/src/main/res/layout/rank_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -14,5 +14,11 @@
         android:background="@color/common_bg_color2"
         android:layout_marginBottom="72dp"
         />
-
+    <ProgressBar
+        android:id="@+id/list_progressbar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"/>
 </android.support.design.widget.CoordinatorLayout>
