--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,7 +89,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/background_border_search"
-                android:backgroundTint="@color/loginBtn"
+                android:backgroundTint="@color/app_main_color"
                 android:text="@string/action_sign_in"
                 android:textColor="@color/text_dark_common"
                 android:textSize="17sp"
