--- a/app/src/main/res/layout/activity_survey.xml
+++ b/app/src/main/res/layout/activity_survey.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff">
-    <include layout="@layout/include_common_toolbar"></include>
+    <include layout="@layout/include_survey_toolbar"></include>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -65,7 +65,7 @@
                     <RadioButton
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
-                        android:buttonTint="@color/btn_check_duplicate_color"
+                        android:buttonTint="@color/app_main_color"
                         android:textColor="#000000"
                         android:textSize="16dp"
                         android:text="매우 만족"/>
@@ -78,7 +78,7 @@
                         android:layout_height="48dp"
                         android:textColor="#000000"
                         android:textSize="16dp"
-                        android:buttonTint="@color/btn_check_duplicate_color"
+                        android:buttonTint="@color/app_main_color"
                         android:text="만족"/>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -89,7 +89,7 @@
                         android:layout_height="48dp"
                         android:textColor="#000000"
                         android:textSize="16dp"
-                        android:buttonTint="@color/btn_check_duplicate_color"
+                        android:buttonTint="@color/app_main_color"
                         android:text="보통"/>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -100,7 +100,7 @@
                         android:layout_height="48dp"
                         android:textColor="#000000"
                         android:textSize="16dp"
-                        android:buttonTint="@color/btn_check_duplicate_color"
+                        android:buttonTint="@color/app_main_color"
                         android:text="불만족"/>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -111,7 +111,7 @@
                         android:layout_height="48dp"
                         android:textColor="#000000"
                         android:textSize="16dp"
-                        android:buttonTint="@color/btn_check_duplicate_color"
+                        android:buttonTint="@color/app_main_color"
                         android:text="매우 불만족"/>
                     <LinearLayout
                         android:layout_width="match_parent"
