--- a/app/src/main/res/layout/include_find_id_toolbar.xml
+++ b/app/src/main/res/layout/include_find_id_toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/login_toolbar"
+        android:id="@+id/find_id_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="#f6f6f6">
