--- a/app/src/main/res/layout/include_find_pass_toolbar.xml
+++ b/app/src/main/res/layout/include_find_pass_toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/login_toolbar"
+        android:id="@+id/find_pass_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="#f6f6f6">
@@ -16,7 +16,7 @@
             android:layout_marginBottom="16dp"
             android:background="#00000000"
             android:src="@drawable/btn_back"
-            android:id="@+id/find_id_back"
+            android:id="@+id/find_pass_back"
             />
 
         <TextView
@@ -38,7 +38,7 @@
             android:layout_gravity="end"
             android:background="#00000000"
             android:src="@drawable/btn_done"
-            android:id="@+id/find_id_done"/>
+            android:id="@+id/find_pass_done"/>
 
     </android.support.v7.widget.Toolbar>
     <LinearLayout
